test/syc/good/neq.c
/*
 * Not equal
 */

int a, b;

int nq(void)
{
	return (int)(a != b);
}
